// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Readig config should provide the configured components for en locale 1`] = `
Object {
  "allFieldTypes": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "checkboxField": Object {
        "helpText": "Check the box",
        "initialContent": Array [
          "check A",
        ],
        "items": Array [
          "check A",
          "check B",
        ],
        "localized": false,
        "name": "Checkbox field",
        "required": false,
        "type": "checkbox",
      },
      "dateField": Object {
        "helpText": "Helptext for date field",
        "initialContent": "2020-03-02T04:05+01:00",
        "localized": false,
        "name": "Date field",
        "required": false,
        "type": "date",
      },
      "dropdownField": Object {
        "helpText": "Choose a value",
        "initialContent": "drop A",
        "items": Array [
          "drop A",
          "drop B",
        ],
        "localized": false,
        "name": "Dropdown field",
        "required": false,
        "type": "dropdown",
      },
      "longTextField": Object {
        "helpText": "Helptext for long text field",
        "initialContent": "My long text",
        "localized": false,
        "name": "Long text field",
        "required": false,
        "type": "longText",
      },
      "mediaField": Object {
        "helpText": "Helptext for media field",
        "initialContent": true,
        "localized": false,
        "name": "Media field",
        "required": false,
        "type": "media",
      },
      "multipleComponentsField": Object {
        "allowedComponents": Array [
          "page",
        ],
        "helpText": "Helptext for multiple components field",
        "initialContent": Array [
          "someMultiplePage",
        ],
        "localized": false,
        "name": "Multiple components field",
        "required": false,
        "type": "multipleComponents",
      },
      "numberField": Object {
        "helpText": "Helptext for number field",
        "initialContent": 5,
        "localized": false,
        "name": "Number field",
        "required": false,
        "type": "number",
      },
      "richTextField": Object {
        "helpText": "Helptext for rich text field",
        "initialContent": "My richt text field",
        "localized": false,
        "name": "Rich text field",
        "required": false,
        "type": "richText",
      },
      "shortTextField": Object {
        "helpText": "Helptext for short text field",
        "initialContent": "My short text field",
        "localized": false,
        "name": "Short text field",
        "required": false,
        "type": "shortText",
      },
      "singleComponentField": Object {
        "allowedComponents": Array [
          "page",
        ],
        "helpText": "Helptext for sinlge component field",
        "initialContent": "someSinglePage",
        "localized": false,
        "name": "Single component field",
        "required": false,
        "type": "singleComponent",
      },
      "tagsField": Object {
        "initialContent": Array [
          "tag A",
          "tag B",
          "tag C",
        ],
        "localized": false,
        "name": "Tags field",
        "required": false,
        "type": "tags",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "All field types generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "subPage",
      "queryLimit": 10,
    },
  },
  "firstSection": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "defaultField": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Default field",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "First section generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asPageSection": true,
    },
  },
  "globalModel": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Global model generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "global",
      "queryLimit": 10,
    },
  },
  "noFragment": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "No fragment generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {},
  },
  "pageModel": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Page model generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "page",
      "queryLimit": 10,
    },
  },
  "secondSection": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Second section generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asPageSection": true,
    },
  },
  "subPageModel": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Sub page model generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "subPage",
      "queryLimit": 10,
    },
  },
}
`;

exports[`Readig config should provide the configured components for nl locale 1`] = `
Object {
  "allFieldTypes": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "checkboxField": Object {
        "helpText": "Controleer het vak",
        "initialContent": Array [
          "check A",
        ],
        "items": Array [
          "vak A",
          "vak B",
        ],
        "localized": false,
        "name": "Controle vak veld",
        "required": false,
        "type": "checkbox",
      },
      "dateField": Object {
        "helpText": "Helptext voor datum",
        "initialContent": "2020-03-02T04:05+01:00",
        "localized": false,
        "name": "Datum",
        "required": false,
        "type": "date",
      },
      "dropdownField": Object {
        "helpText": "Maak een keuze",
        "initialContent": "drop A",
        "items": Array [
          "optie A",
          "optie B",
        ],
        "localized": false,
        "name": "Opties",
        "required": false,
        "type": "dropdown",
      },
      "longTextField": Object {
        "helpText": "Helptext voor lange tekst",
        "initialContent": "My long text",
        "localized": false,
        "name": "Lange tekst",
        "required": false,
        "type": "longText",
      },
      "mediaField": Object {
        "helpText": "Helptext voor media veld",
        "initialContent": true,
        "localized": false,
        "name": "Afbeelding of video",
        "required": false,
        "type": "media",
      },
      "multipleComponentsField": Object {
        "allowedComponents": Array [
          "page",
        ],
        "helpText": "Helptext voor meerdere compoenten",
        "initialContent": Array [
          "someMultiplePage",
        ],
        "localized": false,
        "name": "Meerdere componenten",
        "required": false,
        "type": "multipleComponents",
      },
      "numberField": Object {
        "helpText": "Helptext voor nummer veld",
        "initialContent": 5,
        "localized": false,
        "name": "Nummer",
        "required": false,
        "type": "number",
      },
      "richTextField": Object {
        "helpText": "Helptext voor tekst editor",
        "initialContent": "My richt text field",
        "localized": false,
        "name": "Tekst editor",
        "required": false,
        "type": "richText",
      },
      "shortTextField": Object {
        "helpText": "Helptext voor korte tekst",
        "initialContent": "My short text field",
        "localized": false,
        "name": "Korte tekst",
        "required": false,
        "type": "shortText",
      },
      "singleComponentField": Object {
        "allowedComponents": Array [
          "page",
        ],
        "helpText": "Helptext voor enkel component",
        "initialContent": "someSinglePage",
        "localized": false,
        "name": "Enkel component",
        "required": false,
        "type": "singleComponent",
      },
      "tagsField": Object {
        "initialContent": Array [
          "tag A",
          "tag B",
          "tag C",
        ],
        "localized": false,
        "name": "Tags field",
        "required": false,
        "type": "tags",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "All field types generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "subPage",
      "queryLimit": 10,
    },
  },
  "firstSection": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "defaultField": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Default field",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "First section generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asPageSection": true,
    },
  },
  "globalModel": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Global model generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "global",
      "queryLimit": 10,
    },
  },
  "noFragment": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "No fragment generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {},
  },
  "pageModel": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Page model generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "page",
      "queryLimit": 10,
    },
  },
  "secondSection": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Second section generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asPageSection": true,
    },
  },
  "subPageModel": Object {
    "fields": Object {
      "__typename": Object {
        "initialContent": "Initial content for short text field",
        "system": true,
        "type": "shortText",
      },
      "heading": Object {
        "initialContent": "Initial content for short text field",
        "localized": false,
        "name": "Heading",
        "required": false,
        "type": "shortText",
      },
      "title": Object {
        "helpText": "Never displayed, only used for listing within Contentful",
        "initialContent": "Sub page model generated from boilerplate",
        "localized": false,
        "name": "Title",
        "required": true,
        "type": "shortText",
      },
    },
    "modelVersion": "1.0.0",
    "settings": Object {
      "asFragment": true,
      "asQuery": "subPage",
      "queryLimit": 10,
    },
  },
}
`;

exports[`Readig config should provide the configured plugin options 1`] = `
Object {
  "another-module-name": Object {
    "anotherTestOption": "passed-to-plugin",
    "testArray": Array [
      "passed",
      "to",
      "plugin",
    ],
  },
  "module-name": Object {
    "testOptione": "to-pass",
  },
}
`;
